<resources>
    <string name="app_name">GeekBrains Weather</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="сhoose_сity">Сhoose Сity</string>
    <string name="enter_city">Enter city</string>
    <string name="moscow">Moscow</string>
    <string name="sant_petersburg">Sant-Petersburg</string>
    <string name="samara">Samara</string>
    <string name="show_additionally">Show additionally</string>
    <string name="speed_wind">Speed wind</string>
    <string name="pressure">Pressure</string>
    <string name="temp">Temp</string>
</resources>